fix layout so that there is no vertical scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,19 @@
 html, body, #root {
   height: 100%;
+  padding: 0px;
+  margin: 0px;
   color-scheme: dark; 
+  box-sizing: border-box;
+}
+
+#root {
+  padding: 0px 50px;
 }
 
 
 body {
   font-size: 18px;
 
-  margin: 0;
-  padding: 50px;
   background: #212429;
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,7 +25,7 @@ body {
 
 #root {
   width: 100%; 
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex; 
   flex-direction: column; 
   justify-content: center;
